--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -4,6 +4,7 @@
   &.is-expanded {
     width: var(--sidenav-width);
   }
+  transition: width 300ms cubic-bezier(0.02, 0.68, 0.63, 0.98);
 
   box-sizing: border-box;
   position: sticky;
@@ -48,4 +49,10 @@
     width: fit-content;
     height: fit-content;
   }
+}
+
+.sidenav-body {
+  width: 100%;
+
+  overflow-x: hidden;
 }
