--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="sidenav-body-container">
   <div class="sidenav-body">
-    <h1>Sidenav</h1>
+    <h1>NardSoft</h1>
 
     <app-menu-link routerLink="/">
       <span icon>🏠</span>
@@ -13,6 +13,10 @@
     <app-menu-link routerLink="/reports">
       <span icon>🏠</span>
       <span>reports</span>
+    </app-menu-link>
+    <app-menu-link routerLink="/customer-items">
+      <span icon>🏠</span>
+      <span>items</span>
     </app-menu-link>
   </div>
 </div>
