--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,1 +1,50 @@
-<div>working products</div>
+<div>products</div>
+
+<div [formGroup]="searchForm">
+  <div *ngFor="let field of formFields" class="inputParent">
+    <div>{{ field.name }}</div>
+    <input
+      type="text"
+      matInput
+      formControlName="{{ field.controlName }}"
+      placeholder="{{ field.name }}"
+      class="loginInput"
+    />
+    <div>
+      <mat-error>{{
+        checkForErrorsIn(searchForm.get(field.controlName))
+      }}</mat-error>
+    </div>
+  </div>
+
+  <button
+    class="loginButton"
+    (click)="submit()"
+    [disabled]="searchForm.status === 'INVALID'"
+  >
+    Search
+  </button>
+
+  <button
+    class="loginButton"
+    (click)="addItem()"
+    [disabled]="searchForm.status === 'INVALID'"
+  >
+    add
+  </button>
+
+  <div
+    *ngFor="
+      let item of collection
+        | paginate : { itemsPerPage: 50, currentPage: p, totalItems: 100 }
+    "
+  >
+    <app-product-item
+      [item]="item"
+      (deleteItemEvent)="deleteItem($event)"
+      (updateItemEvent)="updateItem($event)"
+    ></app-product-item>
+  </div>
+
+  <pagination-controls (pageChange)="p = $event"></pagination-controls>
+</div>
