--- a/src/app/components/add-edit-product/add-edit-product.component.scss
+++ b/src/app/components/add-edit-product/add-edit-product.component.scss
@@ -1,6 +1,7 @@
 .loginInput {
   width: 300px;
   height: 40px;
+  margin-left: 30px;
 }
 
 .inputParent {
@@ -14,4 +15,17 @@
   height: 50px;
   display: block;
   margin-bottom: 20px;
+}
+
+.formParent {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  align-content: center;
+}
+
+:host {
+  background-color: red;
 }
