--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/@angular/material/prebuilt-themes/purple-green.css";
+
 :root {
-  --sidenav-width: 300px;
+  --sidenav-width: 200px;
   --sidenav-collapsed-width: 20px;
 }
