--- a/src/app/pages/customer-items/customer-item.component.html
+++ b/src/app/pages/customer-items/customer-item.component.html
@@ -38,6 +38,6 @@
   </mat-card>
 
   <div class="checkoutButton">
-    <button>checkout {{ cartTotal }}</button>
+    <button (click)="checkout()">checkout {{ cartTotal }}</button>
   </div>
 </div>
