--- a/src/app/pages/reports/reports.component.scss
+++ b/src/app/pages/reports/reports.component.scss
@@ -1,28 +1,4 @@
-.loginParent {
+.transCountainer {
   display: flex;
-  height: 100vh;
-  align-items: center;
-  justify-content: center;
-}
-
-.login {
-  width: 80%;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.loginInput {
-  width: 300px;
-  height: 40px;
-}
-
-.inputParent {
-  margin-bottom: 20px;
-}
-
-.loginButton {
-  width: 100px;
-  height: 50px;
+  justify-content: space-around;
 }
